fix text align

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ img {
 
 h1 {
     color: aquamarine;
-    text-align: end;
+    text-align: start;
 }
 
 ol {
